interactive elements and slideshow

--- a/resume.html
+++ b/resume.html
@@ -3,34 +3,43 @@
 <head>       
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato&family=Montserrat:wght@300;400&family=Poiret+One&display=swap" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <title>Laura Steinkopf | UX/UI Designer</title> 
+
+    <style>
+        body {
+        background-image: url("images/bg-texture-neutral-wash-landscape.jpg");
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-size: cover;    
+        }
+    </style>
 </head>
 
 <body>
 
 <ul>
-    <a href="index.html"><img src="images/logo-with-name.png" alt="logo+name" height="65"></a>
-    <li><a href="#contact">CONTACT</a></li>
-    <li><a href="#work">WORK</a></li>
-    <li><a class="active" href="#about">ABOUT</a></li> 
+    <a href="index.html"><img src="images/logo-with-name.png" alt="logo+name" height="65"></a>  
+    <li><a href="index.html#contact">CONTACT</a></li>
+    <li><a href="index.html#work">WORK</a></li>
+    <li><a href="index.html#about">ABOUT</a></li> 
+    <li><a href="index.html#">HOME</a></li>
 </ul>
 
 
 <section id="heroGrid">
     <div id="leftGraphic" class="heroGridArea">
-        <img src="images/left line graphic.png" alt="sienna retro line graphic" height="750">
-    </div>
+        <img src="images/left line graphic.png" alt="sienna retro line graphic" height="800">
+    </div>    
     <div class="heading">
         <p>RESUME</p>
     </div>
     <div id="rightGraphic" class="heroGridArea">
-        <img src="images/right line graphic.png" alt="black retro line graphic" height="1865">
+        <img src="images/right line graphic.png" alt="black retro line graphic" height="1836">
     </div>    
     
 </section>
-
 
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
