--- a/index.html
+++ b/index.html
@@ -30,12 +30,14 @@
 
 <body>
 
+<div class="navBar">
 <ul>
-    <a href="index.html"><img src="images/logo-with-name.png" alt="logo+name" height="65"></a>  
-    <li><a href="#contact">CONTACT</a></li>
+    <a href="index.html"><img src="images/logo-with-name-light.png" alt="logo+name" height="65"></a>  
+    <li><a href="#bottom">CONTACT</a></li>
     <li><a href="#work">WORK</a></li>
     <li><a href="#about">ABOUT</a></li>     
 </ul>
+</div>
 
 
 <div class="heroGrid">
@@ -48,16 +50,15 @@
         <p2>UX/UI DESIGNER</p2> 
     </div>
     <div id="rightGraphic" class="heroGridArea">
-        <img src="images/right line graphic.png" alt="black retro line graphic" height="1785">
+        <img src="images/right line graphic.png" alt="black retro line graphic" height="1842">
     </div>        
 </div>
 
-
 <div class="heading">
-    <p id="about" >ABOUT</p> 
+    <p id="about" >ABOUT</p>
 </div>
 
-<div id="aboutGrid">
+<div id="aboutGrid"> 
     <div class="helloContainer">  
         <img src="images/button hello black.png" class="hello-image" alt="black circle with word hello inside" height="700">
     </div>
@@ -83,7 +84,7 @@
           <img src="images/case-study01.png" alt="case study 01" style="width:100%" class="hover-opacity">
           <div class="slideOverlay">            
             <p id="caseStudyTitle">CASE STUDY 01</p>
-            <p id="slideCaption">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
+            <p id="slideCaption">Praesent tincidunt sed tellus ut rutrum sed vitae justo. Praesent tincidunt sed tellus ut rutrum sed vitae justo. Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
             <a href="case-study01.html"><button class="button hover-opacity">MORE</button></a>
           </div>
         </div>
@@ -91,7 +92,7 @@
           <img src="images/case-study02.png" alt="case study 02" style="width:100%" class="hover-opacity">
           <div class="slideOverlay">            
             <p id="caseStudyTitle">CASE STUDY 02</p>
-            <p id="slideCaption">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
+            <p id="slideCaption">Praesent tincidunt sed tellus ut rutrum sed vitae justo. Praesent tincidunt sed tellus ut rutrum sed vitae justo. Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
             <a href="case-study02.html"><button class="button hover-opacity">MORE</button></a>
           </div>
         </div>
@@ -99,15 +100,32 @@
           <img src="images/case-study03.png" alt="case study 03" style="width:100%" class="hover-opacity">
           <div class="slideOverlay">            
             <p id="caseStudyTitle">CASE STUDY 03</p>
-            <p id="slideCaption">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
+            <p id="slideCaption">Praesent tincidunt sed tellus ut rutrum sed vitae justo. Praesent tincidunt sed tellus ut rutrum sed vitae justo. Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
             <a href="case-study03.html"><button class="button hover-opacity">MORE</button></a>
           </div>
         </div>
+        <div class="slideCard">
+            <img src="images/case-study04.png" alt="case study 04" style="width:100%" class="hover-opacity">
+            <div class="slideOverlay">            
+              <p id="caseStudyTitle">CASE STUDY 04</p>
+              <p id="slideCaption">Praesent tincidunt sed tellus ut rutrum sed vitae justo. Praesent tincidunt sed tellus ut rutrum sed vitae justo. Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
+              <a href="case-study03.html"><button class="button hover-opacity">MORE</button></a>
+            </div>
+          </div>
+          <div class="slideCard">
+            <img src="images/case-study05.png" alt="case study 05" style="width:100%" class="hover-opacity">
+            <div class="slideOverlay">            
+              <p id="caseStudyTitle">CASE STUDY 05</p>
+              <p id="slideCaption">Praesent tincidunt sed tellus ut rutrum sed vitae justo. Praesent tincidunt sed tellus ut rutrum sed vitae justo. Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
+              <a href="case-study03.html"><button class="button hover-opacity">MORE</button></a>
+            </div>
+          </div>
     </div>
+</div>
 
 
 
-
+<a id="bottom"></a>
 
 <div class="contactGrid">
     <div class="heading">
@@ -131,4 +149,9 @@
 <script src="js/index.js"></script>
 
 </body>
+
+<footer id="footer">
+    <p>&#169 2023 | Laura Steinkopf</p>    
+</footer>
+
 </html>
