adjusted anchor links

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <div class="navBar">
 <ul>
     <a href="index.html"><img src="images/logo-with-name-light.png" alt="logo+name" height="65"></a>  
-    <li><a href="#bottom">CONTACT</a></li>  <!-- does NOT work w/anchor link offset JS -->  
+    <li><a href="#contact">CONTACT</a></li>  <!-- does NOT work w/anchor link offset JS -->  
     <li><a href="#work">WORK</a></li>       <!-- works w/anchor link offset JS-->  
     <li><a href="#about">ABOUT</a></li>     <!-- works w/anchor link offset JS-->  
 </ul>
