--- a/resume.html
+++ b/resume.html
@@ -118,7 +118,7 @@
             <p>A.A.S. Visual Communications						
         </div>
 
-        <div id="rightGraphic">
+        <div id="rightGraphic">  <!-- WHY NOT IN RIGHT GRID SECTION? -->
             <img src="images/right line graphic.png" alt="black retro line graphic" height="1842">
         </div>   
     </div>
