updated anchor links and notes

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 
 <body>
 
+<!-- NAVBAR -->
 <div class="navBar">
 <ul>
     <a href="index.html"><img src="images/logo-with-name-light.png" alt="logo+name" height="65"></a>  
@@ -73,8 +74,6 @@
         <a href="resume.html"><img src="images/button resume blue.png" class="resume-image" alt="blue circle with word 'resume' inside" height="175"></a>
     </div>
 </div>
-
-
 
 
 <!-- WORK Section-->
@@ -168,8 +167,8 @@
 
 </body>
 
+<a id="bottom"></a>  <!-- this works only if JS anchor link offset is OFF -->
 
-<a id="bottom"></a>  <!-- this works only if JS anchor link offset if OFF -->
 <footer id="footer">
     <p>&#169 2023 | Laura Steinkopf</p>    
 </footer>
