updated notes for tutoring session

--- a/resume.html
+++ b/resume.html
@@ -31,7 +31,7 @@
 
 <div class="resumeGrid">
 
-    <div id="leftGraphic">
+    <div id="leftGraphic"> <!--WHY NOT ON LEFT SIDE OF PAGE? SAME CODE AS INDEX.HMTML -->
         <img src="images/left line graphic.png" alt="sienna retro line graphic" height="800">
     </div>     
     
